fixed the spacing on the contact page. decided to allow scrolling as it would make things much easier and more user friendly

--- a/frontend/src/css/Contact.css
+++ b/frontend/src/css/Contact.css
@@ -20,7 +20,7 @@
 .contact-section {
     flex: 1;
     margin: 0 60px;
-    margin-top: 18vh;
+    margin-top: 10vw;
     padding: 30px;
     max-width: 525px;
 
@@ -187,7 +187,8 @@
         width: 100vw;
         height: 100vh;
         height: 100dvh; 
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: scroll;
     }
 
     .contact-container::before {
@@ -205,7 +206,9 @@
 
     .contact-section {
         margin: 0px 15px;
+        margin-top: 80px;
         align-self: center;
+        max-width: 768px;
     }
 
     .contact-form {
@@ -245,7 +248,7 @@
     }
 
     .send-msg-btn {
-        padding: 14px 22px;
+        padding: 12px 24px;
         font-size: 15px;
     }
     
