--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -6,9 +6,7 @@
     background-repeat: no-repeat;
 
     width: 100vw;
-    height: 100vh;
-    position: relative;
-    
+    height: 100vh; 
 }
 
 .background-container::before {
@@ -137,6 +135,14 @@ body {
 @media (max-width: 768px) {
     .background-container {
         background-image: url("/gallery/bgimgmobile.webp");
+        background-color: black;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 100vw;
+        height: 100vh;
+        height: 100dvh;
+        overflow: hidden;
     }
 
     .overlay-text {
